# rhystic

./: Cargo.toml  README.MD
notes/: README.MD
source/: Cargo.toml
source/core/: Cargo.toml
source/server/: Cargo.toml
source/server/src/: main.rs  mod.rs  server.rs
source/src/: main.rs
source/src/types/: event.rs  mod.rs  user.rs
source/types/: Cargo.toml
source/types/src/: event.rs  lib.rs  roles.rs  user.rs
src/: README.MD
tests/: Cargo.toml
