[package]
name = "rhystic-types"
version = "0.0.0"
edition = "2021"

[dependencies]
chrono = "0.4"
serde_yaml = "0.9.16"
serde = { version = "1", features = ["derive"] }
toml = "0.7.1"
serde_json = { version = "1.0.87", features = ["preserve_order"] }
specta = "1"
bytes = "1"
tracing = "0.1.37"
anyhow = "1.0.66"
regex = "1.10.2"